--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-development has moved to [sr.ht](https://git.sr.ht/~alanza/hither)
+development has moved to [[https://git.sr.ht/~alanza/hither][sr.ht]]
 
 * hither
 
